tests/fail/stable/derive_placeholders.stderr
error: placeholder `b` is used multiple times in the format string:
       At "{5} {x} {} {} {b} {} {} {b}"
                                   ^^^
 --> tests/fail/stable/derive_placeholders.rs:2:19
  |
2 | #[sscanf(format = "{5} {x} {} {} {b} {} {} {b}")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: placeholder `b` is used multiple times in the format string:
       At "{5} {x} {} {} {b} {} {} {b}"
                         ^^^
 --> tests/fail/stable/derive_placeholders.rs:2:19
  |
2 | #[sscanf(format = "{5} {x} {} {} {b} {} {} {b}")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: field `b` is marked as default, but is also used in a placeholder:
       At "{b}"
           ^^^
 --> tests/fail/stable/derive_placeholders.rs:9:19
  |
9 | #[sscanf(format = "{b}")]
  |                   ^^^^^

error: field `b` is marked as default, but is also used in a placeholder
  --> tests/fail/stable/derive_placeholders.rs:12:14
   |
12 |     #[sscanf(default = 5)]
   |              ^^^^^^^^^^^
